# BigBrotherv1

./: .env.example  .gitignore  API.Dockerfile  Bot.Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 5c4bede8e69a_create_guilds_table.py
src/api/: __main__.py
src/api/impl/database/: __init__.py  database.py  guild.py
src/api/routes/: __init__.py
src/api/routes/guilds/: __init__.py  impl.py
src/bot/: __init__.py  __main__.py
src/bot/exts/: bigbrother.py
src/bot/impl/bot/: bot.py
src/utils/: __init__.py  api_client.py
